# TicketRadar

./: .env.example  .gitignore  LICENSE  Makefile  README.md  TicketRadar.spec  main.py  prompt  pyproject.toml
export/nuitka/: build.py
export/pyinstaller/: TicketRadar.spec
scripts/: set_admin.py
src/: config.py  logger.py
src/Backend/: .env.example  .gitignore  config.py  logger.py  main.py  pyproject.toml
src/Backend/api/: __init__.py  dependencies.py  schemas.py
src/Backend/api/routers/: __init__.py  admin.py  auth.py  config.py  jobs.py
src/Backend/core/: auth.py  monitor.py
src/Backend/lib/core/: auth.py  job.py  monitor.py
src/Backend/lib/services/: gcp_logger.py
src/Backend/lib/services/notification/: __init__.py  admin_notifier.py  discord_strategy.py  email_strategy.py  factory.py
src/Backend/lib/services/scraper/: __init__.py  factory.py
src/Backend/lib/services/scraper/providers/bookmyshow/: scraper.py
src/Backend/lib/utils/: __init__.py  config.py  logger.py
src/Backend/services/notification/: __init__.py  discord_strategy.py  email_strategy.py  factory.py
src/Backend/services/scraper/: __init__.py  factory.py
src/Backend/services/scraper/providers/bookmyshow/: __init__.py  scraper.py
src/Backend/ui/: __init__.py  components.py  styles.py
src/UI/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
src/UI/src/: App.tsx  index.css
src/UI/src/lib/: firebase.ts
src/UI/src/pages/: AdminDashboard.tsx  AppDashboard.tsx  BlockedPage.tsx  InstructionsPage.tsx  LandingPage.tsx  (+4 more)
src/core/: job.py  monitor.py
src/services/notification/: __init__.py  base.py  discord_strategy.py  email_strategy.py  factory.py
src/services/scraper/: __init__.py  factory.py
src/ui/: __init__.py  components.py
(+15 files in other folders)
