[project]
name = "ticketradar"
version = "0.1.0"
description = "A fully asynchronous movie ticket booking monitor and alert system using Streamlit and Playwright"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.2",
    "httpx>=0.28.1",
    "playwright>=1.61.0",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.59.2",
    "platformdirs>=4.3.0"
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
]
