[project]
name = "ticketradar"
version = "0.1.0"
description = "A fully asynchronous movie ticket booking monitor and alert system using Streamlit and httpx"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "streamlit>=1.59.2",
    "platformdirs>=4.3.0",
    "beautifulsoup4>=4.15.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "nuitka>=2.6.0",
    "ordered-set>=4.1.0",  # required by nuitka
]
